Change Cleaner to jdk internal